Editar solicitud de permuta
